tools/tests/errors/surf_cont_08.ki
# List.index of a value not present
var a = [1, 2, 3]
discard a.index(99)
